kubernetes/apps/base/glance/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance
  namespace: glance
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`glance.local`)
      kind: Rule
      services:
        - name: glance
          port: 8080
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: glance-tls
